--- a/modules/prototype/client/styles/components/ce-grid.scss
+++ b/modules/prototype/client/styles/components/ce-grid.scss
@@ -74,9 +74,22 @@
         font-size: 0.75rem;
         font-style: italic;
 
+
         p {
             margin-bottom: 1rem;
             line-height: 1.2rem;
+        }
+
+        li {
+            margin-bottom: 1rem;
+
+            &:before {
+                font-weight: bold;
+            }
+
+            &:last-child {
+                margin-bottom: 0;
+            }
         }
     }
 }
@@ -142,7 +155,7 @@
         top: 0;
         right: 0;
         padding: 1rem;
-        font-size: 0.75rem;
+        font-size: 0.875rem;
     }
 }
 
