Prototype Modifications - Adding link to project documents - Added documents.html page - removed 'follow up' section from ce-inspection.html

--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -10,6 +10,11 @@
 
     <div class="title-container">
         <h1>{{project.name}}</h1>
+        <div class="actions">
+            <a class="btn btn-link" ui-sref="admin.prototype.documents">
+                <i class="material-icons fl">insert_drive_file</i>Project Documents
+            </a>
+        </div>
     </div>
     <div class="row">
         <main class="col-sm-12 col-md-8">
