--- a/modules/prototype/client/views/ce-inspection.html
+++ b/modules/prototype/client/views/ce-inspection.html
@@ -34,13 +34,7 @@
                             <i class="material-icons">file_download</i>
                         </span>
                     </li>
-                </ul>
-            </section>
-
-            <section ng-if="inspection.followupDocumentUrl">
-                <h2>Inspection Follow Up</h2>
-                     <ul class="resource-list resource-list-lg list-group">
-                        <li class="list-group-item list-group-item-action">
+                    <li class="list-group-item list-group-item-action" ng-if="inspection.followupDocumentUrl">
                             <div class="avatar">
                                 <i class="material-icons">insert_drive_file</i>
                             </div>
@@ -51,7 +45,7 @@
                                 <i class="material-icons">file_download</i>
                             </span>
                         </li>
-                    </ul>
+                </ul>
             </section>
 
             <section>
